Big revival commit